# sys-optimizer

./: README.md  USER_GUIDE.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  cache-insight.manifest  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.txt  icon.icns
src-tauri/rules/: rules.json
src-tauri/src/: commands.rs  config.rs  hardware.rs  lib.rs  logbook.rs  main.rs  tray.rs  types.rs
src-tauri/src/scan/: categories.rs  detect.rs  dup.rs  engine.rs  large.rs  leftover.rs  mod.rs  process.rs  recycle.rs  rules.rs  space.rs  startup.rs  system.rs
src-tauri/windows/: hooks.nsh  installer.nsi
src/assets/brand-icons/: README.md
src/components/: AppIcon.css  AppIcon.tsx  Banner.css  Banner.tsx  CategoryRow.css  CategoryRow.tsx  ConfirmDialog.css  ConfirmDialog.tsx  Icon.tsx  Notice.css  Notice.tsx  TermsGate.css  TermsGate.tsx  Treemap.tsx
src/i18n/: index.tsx
src/lib/: api.ts  appVisual.ts  theme.ts  useSmoothScroll.ts
src/pages/: AboutPage.tsx  AppsPage.css  AppsPage.tsx  DupPage.css  DupPage.tsx  HardwarePage.css  HardwarePage.tsx  LargePage.css  LargePage.tsx  LeftoverPage.css  LeftoverPage.tsx  ScanPage.css  ScanPage.tsx  SettingsPage.css  SettingsPage.tsx  SpacePage.css  SpacePage.tsx  StartupPage.css  StartupPage.tsx  SystemPage.css  SystemPage.tsx
src/styles/: global.css  tokens.css
website/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json
website/scripts/: gen-apps.js  start.js
website/src/: middleware.ts  proxy.ts
website/src/app/: globals.css
website/src/app/[locale]/: layout.tsx  page.tsx
website/src/app/[locale]/[secret]/: page.tsx
website/src/app/[locale]/download/: page.tsx
website/src/app/[locale]/feedback/: page.tsx
website/src/app/api/admin/files/: route.ts
website/src/app/api/admin/login/: route.ts
website/src/app/api/admin/logs/: route.ts
website/src/app/api/admin/session/: route.ts
website/src/app/api/admin/upload/: route.ts
website/src/app/api/download/: route.ts
website/src/app/api/feedback/: route.ts
website/src/app/api/files/: route.ts
website/src/components/: AdminClient.tsx  FeedbackForm.tsx  LangSwitch.tsx  SiteFooter.tsx  SiteHeader.tsx  logos.tsx
website/src/content/: apps.ts  home.ts
website/src/i18n/: dict.ts
website/src/lib/: auth.ts  downloadLog.ts  env.ts  format.ts  mailer.ts  oss.ts  ratelimit.ts  sts.ts
website/src/types/: alicloud.d.ts
