[package]
name = "cache-insight"
version = "1.0.0"
description = "Cache Insight 智缓 — Windows 垃圾清理与系统洞察工具"
authors = ["沈阳信商科技"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "cache_insight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 目录遍历(不跟随符号链接由我们在代码里控制)
walkdir = "2"
# 回收站删除(对应 Electron 的 shell.trashItem)
trash = "5"
# 时间戳(日志、横幅 30 天再现)
chrono = { version = "0.4", features = ["serde"] }
# 并行遍历/哈希(重复文件模块将用到,骨架先引入)
rayon = "1"

[target.'cfg(windows)'.dependencies]
# 注册表读写(启动项管理:Run 键 + StartupApproved)
winreg = "0.52"
# WMI 查询(硬件检测:CPU/主板/内存插槽/GPU 等)
wmi = "0.14"

[profile.release]
panic = "abort"     # 更小的体积;崩溃由 panic hook 先落日志
codegen-units = 1
lto = true
opt-level = "s"
strip = true
