[package]
name = "cache-insight"
version = "1.0.0"
description = "Cache Insight 智缓 — Windows 垃圾清理与系统洞察工具"
authors = ["沈阳信商科技"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "cache_insight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
# 单实例:重复启动时聚焦已有窗口而非再开一个
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 目录遍历(不跟随符号链接由我们在代码里控制)
walkdir = "2"
# 回收站删除(对应 Electron 的 shell.trashItem)
trash = "5"
# 时间戳(日志、横幅 30 天再现)
chrono = { version = "0.4", features = ["serde"] }
# 并行遍历/哈希(重复文件模块将用到,骨架先引入)
rayon = "1"

[target.'cfg(windows)'.dependencies]
# 注册表读写(启动项管理:Run 键 + StartupApproved)
winreg = "0.56"
# WMI 查询(硬件检测:CPU/主板/内存插槽/GPU 等)
# 注意:wmi 0.18 默认拉取 windows-core 0.62,而 tauri 2.11 固定 windows-core 0.61,
# 二者的 COM 接口不能跨版本统一。Cargo.lock 已将 windows-core 锁定到 0.61.2 以对齐 tauri。
# 若 `cargo update` 把 windows-core 顶到 0.62 导致 wmi 编译失败,请重新执行:
#   cargo update -p windows-core --precise 0.61.2
# (待 tauri 升级到 windows-core 0.62 后可移除该约束)
wmi = "0.18"
# 显示器枚举(EnumDisplayDevices/EnumDisplaySettings:各屏分辨率与刷新率)
# Win32_Globalization:托盘菜单跟随系统语言(GetUserDefaultUILanguage)
# Win32_System_Diagnostics_ToolHelp:进程快照(清理前检测浏览器是否运行)
# 版本须与 tauri 所用 windows-core 0.61 对齐
windows = { version = "0.61", features = ["Win32_Graphics_Gdi", "Win32_Foundation", "Win32_Globalization", "Win32_System_Diagnostics_ToolHelp"] }

[profile.release]
panic = "abort"     # 更小的体积;崩溃由 panic hook 先落日志
codegen-units = 1
lto = true
opt-level = "s"
strip = true
